# Material-Property-Prediction

./: .gitignore  CHANGELOG.md  COMPETITIVE_ANALYSIS.md  INSTALL.md  LICENSE  Makefile  README.md  RELEASE_CHECKLIST.md  __init__.py  main.py  prepare_release.py  push_to_github.bat  push_to_github.sh  pyproject.toml  requirements.txt  run.bat  run.sh  setup.bat  setup.py  setup.sh  test_gui.py  test_package_install.py  test_real_data.bat  test_real_data.sh  validate_system.py
api/: __init__.py  rest_api.py
app/: __init__.py  streamlit_app.py  streamlit_app_old.py
configs/: config.yaml
configs/data/: default.yaml
configs/model/: default.yaml
configs/training/: default.yaml
data/: REAL_DATA_README.md  __init__.py  generator.py  preprocessor.py
docs/: ACHIEVEMENT_SUMMARY.md  API_DOCUMENTATION.md  BUG_FIXES_COMPLETE.md  BUG_FIXES_FINAL.md  BUG_FIXES_SUMMARY.md  COMPREHENSIVE_TEST_SUMMARY.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  FINAL_VALIDATION_REPORT.md  GUI_LAUNCH_GUIDE.md  GUI_PROFESSIONAL_UPGRADE.md  GUI_TESTING_GUIDE.md  INDEX.md  LAUNCH_GUI.md  LINKEDIN_POSTS.md  PACKAGE_USAGE_GUIDE.md  PRODUCTION_CHECKLIST.md  QUICK_START_GUIDE.md  README_WORLD_CLASS.md  REAL_DATA_TESTING_SUMMARY.md  REAL_DATA_TEST_REPORT.md  RELEASE_NOTES.md  RELEASE_SUMMARY.md  SHIPPING_MANIFEST.md  SHIP_IT.md  TESTING_GUIDE.md  VALIDATION_REPORT.md  WHAT_WAS_DONE.md  WORLD_CLASS_FEATURES.md  test_gui_quick.md
explainability/: __init__.py  shap_explainer.py
inference/: __init__.py  batch_predictor.py  predictor.py
logs/: .gitkeep
models/: __init__.py  cvae.py  ft_transformer.py  gbm.py
results/: .gitkeep  real_data_validation.csv
scripts/: comprehensive_test.py  generate_data.py  test_gui_thoroughly.py  train_all.py  validate_gui_professional.py  validate_real_data.py
tests/: test_data.py  test_inference.py  test_integration.py  test_losses.py  test_models.py  test_production_readiness.py
training/: __init__.py  losses.py  pipeline.py  trainer_cvae.py  trainer_deep.py
utils/: __init__.py  caching.py  file_logging.py  io.py  logging.py  model_versioning.py  monitoring.py  seed.py
