[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "material_ai"
version = "1.0.0"
description = "AI Framework for Material Property Prediction of TIG Welded Aerospace Structures"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Material AI Team" }]

[project.scripts]
material-ai = "material_ai.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["material_ai*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
